<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile People Directory</string>

    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_favorites">Favorites</string>

    <string name="user_added_favorites">Added to favorites</string>
    <string name="user_removed_favorites">Removed from favorites</string>

    <string name="forgot_password">Forgot password</string>
    <string name="no_account">No Account?</string>
    <string name="msg_signing_in">Signing In</string>


    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="enter_email">Please enter you email account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_lc">Sign In</string>
    <string name="submit">SUBMIT</string>
    <string name="reset_link">SEND RESET LINK</string>

    <string name="email">Email:</string>
    <string name="sms">SMS:</string>
    <string name="job_title">Job Title:</string>
    <string name="screen_name">Screen Name:</string>
    <string name="city">City:</string>
    <string name="phone">Phone:</string>
    <string name="skype">Skype:</string>
    <string name="location">Location:</string>
    <string name="facebook">Facebook:</string>
    <string name="twitter">Twitter:</string>

    <string name="msg_updating_people_directory">Updating people Directory</string>

</resources>
