<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:textSize="18dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_action_email"
        android:drawableLeft="@drawable/ic_action_email"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:textSize="18dp"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_action_secure"
        android:drawableLeft="@drawable/ic_action_secure"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_sign_in"
        android:textSize="18dp"
        android:padding="14dp"
        android:clickable="true"
        android:gravity="center"
        android:textColor="@color/lr_white"
        android:layout_marginTop="48dp"
        android:text="@string/sign_in" />

</LinearLayout>