<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/lr_black_05"
    android:layout_width="match_parent"
    android:paddingBottom="4dp"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/lr_fragment_directory_detail_image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lr_fragment_directory_detail_image_background"
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_height="@dimen/background_image_size" />

        <com.rivetlogic.liferayrivet.component.CircularImageView
            android:id="@+id/lr_fragment_directory_detail_image"
            android:layout_width="wrap_content"
            app:border_width="2dp"
            app:border_color="@color/lr_white"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <TextView
        android:id="@+id/lr_fragment_directory_detail_name"
        android:layout_below="@+id/lr_fragment_directory_detail_image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="29dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:textColor="@color/lr_black_60" />

    <TextView
        android:id="@+id/lr_fragment_directory_detail_screen_name"
        android:layout_below="@+id/lr_fragment_directory_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/lr_black_40"
        android:textSize="18dp"
        />

    <LinearLayout
        android:visibility="gone"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skype_white"
            android:background="@drawable/button_skype"
            android:clickable="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_white"
            android:layout_marginLeft="12dp"
            android:background="@drawable/button_phone"
            android:clickable="true" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/lr_fragment_directory_detail_phone_button"
        android:background="@drawable/background_detail_fragment_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lr_fragment_directory_detail_phone_icon"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lr_ic_action_call" />

        <LinearLayout
            android:layout_toRightOf="@id/lr_fragment_directory_detail_phone_icon"
            android:id="@+id/lr_fragment_directory_detail_phone_info"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/lr_black_80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/lr_fragment_directory_detail_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="@color/lr_black_40" />

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"
            android:layout_alignLeft="@id/lr_fragment_directory_detail_phone_info"
            android:layout_alignParentTop="true"
            android:layout_marginRight="24dp" />
    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/lr_fragment_directory_detail_email_button"
        android:layout_above="@+id/lr_fragment_directory_detail_phone_button"
        android:background="@drawable/background_detail_fragment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lr_fragment_directory_detail_email_icon"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lr_ic_action_email" />

        <LinearLayout
            android:layout_toRightOf="@id/lr_fragment_directory_detail_email_icon"
            android:id="@+id/lr_fragment_directory_detail_email_info"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/lr_black_80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/email" />

            <TextView
                android:id="@+id/lr_fragment_directory_detail_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="@color/lr_black_40" />

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"
            android:layout_alignLeft="@id/lr_fragment_directory_detail_email_info"
            android:layout_alignParentTop="true"
            android:layout_marginRight="24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lr_fragment_directory_detail_skype_button"
        android:layout_above="@+id/lr_fragment_directory_detail_email_button"
        android:background="@drawable/background_detail_fragment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lr_fragment_directory_detail_skype_icon"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lr_ic_skype_large" />

        <LinearLayout
            android:layout_toRightOf="@id/lr_fragment_directory_detail_skype_icon"
            android:id="@+id/lr_fragment_directory_detail_skype_info"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/lr_black_80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/skype" />

            <TextView
                android:id="@+id/lr_fragment_directory_detail_skype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textColor="@color/lr_black_40" />

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"
            android:layout_alignLeft="@id/lr_fragment_directory_detail_skype_info"
            android:layout_alignParentTop="true"
            android:layout_marginRight="24dp" />
    </RelativeLayout>

</RelativeLayout>